<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginRight="@dimen/margin_standard"
            tools:text="02.12.1985"/>

        <TextView
            android:id="@+id/criterion_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_view"
            tools:text="Критерий получения погоды"/>

        <TextView
            android:id="@+id/city_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/criterion_text_view"
            tools:text="Название города"/>

        <TextView
            android:id="@+id/description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city_name_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_screen"
            tools:text="Описание"/>

        <TextView
            android:id="@+id/temperature_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_screen"
            android:text="@string/middle_temperature_text"/>

        <TextView
            android:id="@+id/min_max_temperature_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/temperature_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_screen"
            android:text="@string/min_max_temperature_text"/>

        <TextView
            android:id="@+id/pressure_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/min_max_temperature_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_screen"
            android:text="@string/pressure_text"/>

        <TextView
            android:id="@+id/humidity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pressure_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_screen"
            android:text="@string/humidity_text"/>

        <TextView
            android:id="@+id/wind_speed_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/humidity_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_screen"
            android:text="@string/wind_speed_text"/>

        <TextView
            android:id="@+id/wind_orientation_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wind_speed_text_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/padding_screen"
            android:text="@string/wind_orientation_text"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
