<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_screen"
    tools:context=".presentation.ui.MainActivity">

    <TextView
        android:id="@+id/main_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/main_screen_title"/>

    <Button
        android:id="@+id/select_city_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_standard"
        app:layout_constraintTop_toBottomOf="@id/main_screen_title"
        android:text="@string/select_city"/>

    <Button
        android:id="@+id/by_location_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_city_button"
        android:layout_marginTop="@dimen/margin_standard"
        android:text="@string/by_current_location"/>

    <FrameLayout
        android:id="@+id/weather_info_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/by_location_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/margin_standard">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>